Fix overflow in css

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 body {
   min-height: 100vh;
   background: #000;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 #background {
   position: relative;
@@ -46,7 +49,7 @@ body {
   background: #0f0;
 }
 .hexagon:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 4px;
   bottom: 4px;
@@ -57,7 +60,7 @@ body {
   z-index: 1;
 }
 .hexagon:before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -77,7 +80,7 @@ body {
 
 .container-bx {
   position: relative;
-  content: "";
+  content: '';
   margin-top: 50px;
   padding: 40px;
   width: 550px;
@@ -89,7 +92,7 @@ body {
 }
 
 .container-bx::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 4px;
   bottom: 4px;
@@ -99,7 +102,7 @@ body {
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
 .container-bx::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -276,7 +279,7 @@ hr {
 }
 
 .swal-modal::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 4px;
   bottom: 4px;
@@ -286,7 +289,7 @@ hr {
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
 .swal-modal::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
